finish section welcome

--- a/login.html
+++ b/login.html
@@ -4,14 +4,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Login</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<main>
 			<div id="container">
-				<section class="section-hello">
-					<h1>Welcome!</h1>
-					<p>Happy to see you around here.</p>
+				<section class="section-welcome">
+					<h1 class="section-welcome_title">Welcome</h1>
+					<br>
+					<p class="section-welcome_p">Happy to see you<br>Create your account</p>
+					<br>
+					<button class="btn-signup">SIGN UP</button>
 				</section>
 				<section class="section-login">
 					<h1>Login</h1>
@@ -19,6 +22,7 @@
 					<form>
 						<label>
 							<span>Username</span>
+							<br>
 							<input type="text" name="name" placeholder="Username or Email">
 						</label>
 					</form>
