div on page register and finish

--- a/register.html
+++ b/register.html
@@ -10,7 +10,9 @@
 		<main>
 			<div id="container-register">
 				<section id="section-register">
-					<h1 class="text-account">Create Account</h1>
+					<div class="create">
+						<h1 class="text-account">Create Account</h1>
+					</div>
 					<div>
 						<label>
 							<input type="text" name="name" class="input-text" placeholder="Full name">
