--- a/register.html
+++ b/register.html
@@ -21,15 +21,15 @@
 							<input type="text" name="email" class="input-text" placeholder="E-mail">
 						</label>
 						<label>
-							<input type="text" name="CEP" class="input-text" placeholder="CEP">
+							<input type="text" name="cep" class="input-text" placeholder="CEP">
 						</label>
 						<label>
-							<input type="text" name="address" class="input-text" placeholder="Street">
+							<input type="text" name="street" class="input-text" placeholder="Street">
 						</label>
 					</div>
 					<div>
 						<label>
-							<input type="text" name="address" class="input-text" placeholder="Street number">
+							<input type="text" name="number" class="input-text" placeholder="Street number">
 						</label>
 						<label>
 							<input type="text" name="city" class="input-text" placeholder="City">
