searching CEP on button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 				<section class="section-welcome">
 					<h1 class="section-welcome_title">Welcome!</h1>
 					<p class="section-welcome_subtitle">Happy to see you</p>
-					<p class="section-welcome_create">Create your account:</p>
+					<p class="section-welcome_create">Search your CEP</p>
 					<a href="register.html">
-						<button class="btn-signup">SIGN UP</button>
+						<button class="btn-signup">SEARCH</button>
 					</a>
 				</section>
 				<section class="section-login">
