--- a/register.html
+++ b/register.html
@@ -11,34 +11,27 @@
 			<div id="container-register">
 				<section id="section-register">
 					<div class="create">
-						<h1 class="text-account">Create Account</h1>
+						<h1 class="text-account">Search your CEP</h1>
 					</div>
 					<div>
 						<label>
-							<input type="text" name="name" class="input-text" placeholder="Full name">
+							<input type="text" name="cep" class="input-text" placeholder="CEP" id="cep">
 						</label>
 						<label>
-							<input type="text" name="email" class="input-text" placeholder="E-mail">
-						</label>
-						<label>
-							<input type="text" name="cep" class="input-text" placeholder="CEP">
-						</label>
-						<label>
-							<input type="text" name="street" class="input-text" placeholder="Street">
+							<input type="text" name="street" class="input-text" placeholder="Street" id="street">
 						</label>
 					</div>
 					<div>
 						<label>
-							<input type="text" name="number" class="input-text" placeholder="Street number">
+							<input type="text" name="city" class="input-text" placeholder="City" id="city">
 						</label>
 						<label>
-							<input type="text" name="city" class="input-text" placeholder="City">
-						</label>
-						<label>
-							<input type="text" name="uf" class="input-text" placeholder="UF">
+							<input type="text" name="uf" class="input-text" placeholder="State" id="uf">
 						</label>
 					</div>
-					<button id="submit-register">SIGN UP</button>
+					<div>
+						<button id="submit-cep">SEARCH CEP</button>
+					</div>
 				</section>
 			</div>
 		</main>
