finally website responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<h1 class="section-welcome_title">Welcome!</h1>
 					<p class="section-welcome_subtitle">Happy to see you</p>
 					<p class="section-welcome_create">Search your CEP</p>
-					<a href="register.html">
+					<a href="search.html">
 						<button class="btn-signup">SEARCH</button>
 					</a>
 				</section>
