--- a/search.html
+++ b/search.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Register</title>
+		<title>Search CEP</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<main>
-			<div id="container-register">
-				<section id="section-register">
+			<div id="container-search">
+				<section id="section-search">
 					<div class="create">
 						<h1 class="text-account">Search your CEP</h1>
 					</div>
@@ -29,7 +29,7 @@
 							<input type="text" name="uf" class="input-text" placeholder="State" id="uf">
 						</label>
 					</div>
-					<div>
+					<div class="container-btn">
 						<button id="submit-cep">SEARCH CEP</button>
 					</div>
 				</section>
