--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
 							<input type="text" name="cep" class="input-text" placeholder="CEP" id="cep">
 						</label>
 						<label>
-							<input type="text" name="street" class="input-text" placeholder="Street" id="street">
+							<input type="text" name="street" class="input-text" placeholder="Location" id="street">
 						</label>
 					</div>
 					<div>
