learning async await

--- a/search.html
+++ b/search.html
@@ -37,4 +37,5 @@
 		</main>
 	</body>
 	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/testVIACEP.js"></script>
 </html>
