arrumando pagina de login

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<main>
-			<div id="container">
+			<div id="container" class="container__index">
 				<section class="section-welcome">
 					<h1 class="section-welcome_title">Welcome!</h1>
 					<p class="section-welcome_subtitle">Happy to see you</p>
